# ELF-examples

./: .gitignore  .gitmodules  README.md
MCTS/: CMakeLists.txt  README.md  elf_adaptor.h  game.h  model.py  pybind_module.cc  run.py
atari/: CMakeLists.txt  README.md  atari_game.cc  atari_game.h  elf_adaptor.h  install.sh  model.py  pybind_module.cc  run.py
